# fourierdrawing

./: .gitignore  README.md  fourier-drawing.ipynb  pyproject.toml
fourier_drawing/: data.py  fourier.py  fourier_drawing.py  fourier_plotting.py  resampling.py
